Fixed socket visibility

--- a/nodeio/style.css
+++ b/nodeio/style.css
@@ -189,6 +189,10 @@ path {
   min-width: 150px;
 }
 
+.node > [hidden] {
+  display: none;
+}
+
 .node > p {
   margin-bottom: 1rem;
   color: #000000;
